--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,11 @@
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": ".",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -16,7 +18,19 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "rootDir": ".",
     "jsx": "preserve"
+  },
+  "paths": {
+    "components": [
+      "components/"
+    ],
+    "contexts": [
+      "contexts/"
+    ],
+    "styles/*": [
+      "styles/*"
+    ],
   },
   "include": [
     "next-env.d.ts",
